# void

./: .pages.yml  .stignore  README.md
room01-garden-of-learning/chip8-emulator/: Cargo.toml  README.md  bacon.toml
room01-garden-of-learning/chip8-emulator/.cargo/: config.toml
room01-garden-of-learning/chip8-emulator/src/: main.rs
room02-trash-pile-of-tools/poc/poc-mailinblack-solver/: Cargo.toml
room02-trash-pile-of-tools/quick-but-mostly-dirty/addy-smtp-proxy/: .env.example  Dockerfile  compose.yml  proxy.py  pyproject.toml
room02-trash-pile-of-tools/wip-not-yet-usable/gitlab-fs/: .gitignore  Cargo.toml  README.md
room02-trash-pile-of-tools/wip-not-yet-usable/portmole/: Cargo.toml  README.md
room03-sea-of-lost-ideas/dedale/: .gitignore  Cargo.toml  README.md
room03-sea-of-lost-ideas/dedale-tunnel/: Cargo.toml  build.rs
room03-sea-of-lost-ideas/dedale-tunnel/.cargo/: config.toml
room03-sea-of-lost-ideas/dedale-tunnel/proto/: proxy.proto  report.proto
room03-sea-of-lost-ideas/dedale-tunnel/src/: main.rs  utils.rs
room03-sea-of-lost-ideas/dedale-wip/: .gitignore  Cargo.toml  README.md  moon.yml
room03-sea-of-lost-ideas/dedale-wip/src/: cli.rs  config.rs  main.rs
room03-sea-of-lost-ideas/dedale/.devcontainer/: docker-compose.yml
room03-sea-of-lost-ideas/dedale/config/: development.yaml  test.yaml
room03-sea-of-lost-ideas/dedale/frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
room03-sea-of-lost-ideas/dedale/migration/: Cargo.toml
room03-sea-of-lost-ideas/dedale/src/: app.rs  lib.rs
room03-sea-of-lost-ideas/discord-logbot/: Cargo.toml  bacon.toml
room03-sea-of-lost-ideas/discord-logbot/migration/: Cargo.toml
room03-sea-of-lost-ideas/discord-logbot/src/: commands.rs  event_handler.rs  main.rs  utils.rs
room03-sea-of-lost-ideas/fast-ihex/: Cargo.toml  README.md
room03-sea-of-lost-ideas/fast-ihex/lib/: Cargo.toml
room03-sea-of-lost-ideas/fast-ihex/tests/: Cargo.toml
room03-sea-of-lost-ideas/gu-pot/: .gitignore  Cargo.toml  Dioxus.toml  README.md  bacon.toml  package-lock.json  package.json  tailwind.config.js
room03-sea-of-lost-ideas/gu-pot/src/: main.rs
room03-sea-of-lost-ideas/opinionated-french-news-aggregator/: Cargo.toml  README.md
room03-sea-of-lost-ideas/opinionated-french-news-aggregator/.cargo/: config.toml
room03-sea-of-lost-ideas/prr/: Cargo.toml  LICENSE  README.org  rust-toolchain.toml
room03-sea-of-lost-ideas/prr/.cargo/: config.toml
room03-sea-of-lost-ideas/prr/src/: cli.rs  main.rs  packages_definitions.rs
room03-sea-of-lost-ideas/warframe-market-api/: Cargo.toml  README.md
room03-sea-of-lost-ideas/warframe-market-api/lib/: Cargo.toml
room07-forgotten-challenges/artifacts-mmo-rs/: Cargo.toml  README.md
room07-forgotten-challenges/nuit-info-2022-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix
room07-forgotten-challenges/nuit-info-2022-backend/.cargo/: about.hbs  about.toml  audit.toml  config.toml  deny.toml  nextest.toml
room07-forgotten-challenges/nuit-info-2022-backend/gbemu/: main.js  package-lock.json  package.json
room09-chaotic-library/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  bacon.toml  compose.yml  config.toml  flake.nix  package-lock.json  package.json  postcss.config.js  prettier.config.js  result  stylelint.config.js  tailwind.config.js
room09-chaotic-library/.zed/: settings.json
room09-chaotic-library/assets/views/: _icons.html.tera  _macros.html.tera
room09-chaotic-library/config/: development.yaml  test.yaml
room09-chaotic-library/content/: _index.md  about.md  autolink.toml  blogroll.md  webmentions.json
room09-chaotic-library/content/about/: _index.md
room09-chaotic-library/content/cms/: _index.md
room09-chaotic-library/content/garden/: _index.md  illiterate-project-idea-and-goals.md  roadmap.md  rss-feed-tracking-with-anonymous-ips.md  test.md  warframe-11th-anniversary-easter-egg.md
room09-chaotic-library/content/notes/: 2026-w04.md  2026-w04.md-comments.json  2026-w05.md  2026-w06.md  2026-w07.md  2026-w08.md  2026-w09.md  2026-w10.md  _index.md  _template.md
room09-chaotic-library/content/series/: _index.md  project-illiterate.md
room09-chaotic-library/contents/: Tasks.md
room09-chaotic-library/contents/blog/: 1.en.md  1.md  2.md  _data.toml
room09-chaotic-library/contents/space/: _data.toml
room09-chaotic-library/contents/wiki/: FINN.md  Faust.md  FloPoCo.md  Syfala.md
room09-chaotic-library/examples/: playground.rs
room09-chaotic-library/i18n/: en.toml
room09-chaotic-library/sass/: fonts.scss  mods.scss
room09-chaotic-library/sass/mods/: a-no-underline-by-default.scss  article-heading.scss  banner-max-height.scss  buttons-small-margin.scss  comments-fix.scss  content-size.scss  iframe-fix.scss  inline-image.scss  no-js-nav.scss  rainbow-text.scss  reverse-scroll-crt.scss  series-part-list.scss  simple-article-list.scss  spoiler-fix.scss  spoiler-tw.scss  tag-label.scss  wavy-text.scss  wild-mode.scss  zola-anchor.scss
room09-chaotic-library/scripts/: cache-fediverse-comments.sh  cache-webmentions.sh  clean-exif-metadata.sh  send-webmentions.pl  webmentions.csv
room09-chaotic-library/src/: app.rs  lib.rs
room09-chaotic-library/src/common/: settings.rs
room09-chaotic-library/src/controllers/: content.rs  mod.rs  page.rs
room09-chaotic-library/src/initializers/: custom_tera_view.rs  livereload.rs  mod.rs
room09-chaotic-library/src/models/: mod.rs
room09-chaotic-library/src/styles/: main.css  sans-serif.css  sans.css  serif.css
room09-chaotic-library/src/utils/: content.rs  entry.rs  json.rs  markdown.rs  mod.rs  page.rs  string.rs
room09-chaotic-library/src/views/: content.rs  page.rs
room09-chaotic-library/static/: atom-style.min.js  atom-style.rss-style.js  copy-button.js  feed.rss-style.css  rss-style.min.js  rss-style.rss-style.js  site.webmanifest  sveltia-cms.js
room09-chaotic-library/templates/: article.html  article_list.html  atom.xml  base.html  cms.html  feed.json  page.html  rss.xml  serie.html
(+1522 files in other folders)
