[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", default-features = false }
bevy_ratatui = "0.9.0"
crossterm = "0.29.0"
dioxus-devtools = "0.7.0-alpha.0"
ratatui = "0.29.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
