[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", default-features = false }
bevy_ratatui = "0.9.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
# Parsing
nom = { version = "8.0.0", default-features = false }
# Tracing/Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# JIT
wasmi = "0.47.0"
# Hot reload
dioxus-devtools = "0.7.0-alpha.1"
crabtime = "1.1.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
