[package]
name = "dedale-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["env", "derive"] }
color-eyre = "0.6.3"
hyper = { version = "1.3.1", features = ["client"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tonic = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-health = "0.11.0"
async-stream = "0.3.5"
uuid = { version = "1.8.0", features = ["v7"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
bytes = "1.6.0"

[build-dependencies]
tonic-build = "0.11"
