[package]
name = "dedale"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
# clap = { version = "4.5.2", features = ["env", "derive"] }
color-eyre = "0.6"
pingora = { version = "0.1", tag = "0.1.1", features = [
    "proxy",
], git = "https://github.com/cloudflare/pingora.git" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["parking_lot", "sync"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# serde = { version = "1.0.197", features = ["derive"] }
# toml = { version = "0.8.10", features = ["preserve_order"] }
