[package]
name = "discord-logbot"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[dependencies]
migration = { path = "migration" }
tokio = { workspace = true }
poise = "0.6.1"
sea-orm = { version = "1.1.14", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
zeroize = "1.8.1"
rand = "^0.8"
rsa = "0.9.8"
argon2 = { version = "0.5.3", features = ["zeroize"] }
chacha20poly1305 = "0.10.1"
aead = { version = "0.5.2", features = ["alloc"] }
sha2 = "0.10.9"
