[package]
name = "ofna"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
feed-rs = "1.3.0"
maud = "0.25"
reqwest = "0.11"
select = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_dhall = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v8"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
