cargo-features = ["strip"]

[package]
name = "prr"
version = "1.0.0"
edition = "2021"
authors = [
    "v3rmine <v3rmine@astriiid.fr>"
]
license = "MIT"

[dependencies]
# Cli
clap = { version = "^3.1", features = ["derive"] }

# JSON
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# CLI
console = "^0.15"
dialoguer = "^0.10"

# Errors handling
eyre = "^0.6"
color-eyre = "^0.5"

[profile.release]
strip = true # Automatically strip symbols from the binary.
debug = 1
incremental = false
lto = "fat"
# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1
# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = "s"
