[workspace]
resolver = "2"
members = ["lib/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
base64 = "0.22"
http = "1.1"
thiserror = "1.0"
tracing = "0.1"
proptest = "1.5"
nutype = { version = "0.4", features = ["regex"] }
regex = "1.10"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
typed-builder = "0.19"
