[workspace]
members = ["bin", "services/*", "xtask"]

[workspace.package]
authors = ["v3rmine <v3rmine@astriiid.fr>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Env file loading
dotenvy = "0.15"
# Custom errors for libraries
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
# Needed so intrument works with async functions
tracing-futures = "0.2"
# Honeycomb support
tracing-honeycomb = "0.4"
libhoney-rust = "0.1"
# Logging view
tracing-tree = "0.2"
# Dispatch on 2 types
either = "1.7"
# Serializing / Deserializing objects
serde = "1.0"
serde_json = "1.0"
# Cli builder
clap = "4.0.8"
# Error handling
eyre = "0.6"
color-eyre = "0.6"
# Termination handler
ctrlc = "3.0"
# RwLock / Mutex without deadlocks
parking_lot = "0.12"
# Libc for raw errors
libc = "0.2"
# Runtime constants
once_cell = "1.16"
# Async runtime
tokio = "1"
# HTTP server 
tower = "0.4"
tower-http = "0.3"
axum = "0.5"
# Bundling assets in the binary
include_dir = "0.7.2"
# To parse user inputed time
humantime = "2.1"
chrono = { version = "0.4", default-features = false }
# Helper to handle structs
typed-builder = "0.10.0"
# Helper to run linux commands
duct = "0.13"
# Computing assets SHA256 hashes
sha2 = "0.10.6"
base64 = "0.13.0"

logging = { path = "./services/logging" }
env = { path = "./services/env" }

[profile.release]
lto = 'fat'
opt-level = 3
debug-assertions = false
