cargo-features = ["strip"]

[package]
name = "portmole"
version = "1.0.0"
edition = "2021"
authors = [
    "v3rmine <v3rmine@astriiid.fr>"
]
license = "MIT"
description = "Client and server to discover filtered TCP and UDP ports on a network"

[dependencies]
# Cli
clap = { version = "^3.1", features = ["derive"] }

# IO & Async
tokio = { version = "^1.17", features = ["net", "rt-multi-thread", "time"] }
futures = "^0.3"
trust-dns-resolver = "^0.20"

# Logging
simple_logger = "^2.1"
log = "^0.4"

# Errors handling
eyre = "^0.6"
color-eyre = "^0.5"

[profile.release]
strip = true # Automatically strip symbols from the binary.
debug = 1
incremental = false
lto = "fat"
# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1
# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = "s"
