[package]
name = "gouv-rs"
version = "0.1.1"
authors = ["v3rmine <v3rmine@astriiid.fr>"]
edition = "2018"

[[bin]]
name = "covid-bot"
path = "src/bin/covid-bot.rs"
required-features = ["covid-bot"]

[[bin]]
name = "webhook"
path = "src/bin/webhook.rs"
required-features = ["webhook"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
covid-bot = ["serde","serde_json","csv","discord"]
webhook = []
server = []
discord = []

[dependencies]
hyper = { version = "0.13", features = ["tcp"], default-features = false}
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["macros","rt-core"] }
sha2 = "0.8"
base64 = "0.12"
chrono = "0.4"
prettytable-rs = "0.8"

# Binaries
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.1", optional = true }
