[package]
name = "boilrs"
version = "1.0.0"
authors = ["v3rmine <v3rmine@astriiid.fr>"]
edition = "2018"
description = "Small util to generate projets from templates (the installed files are in $HOME/.boilrs)."

[[bin]]
name = "boilrs"
path = "src/bin/boilrs.rs"

[lib]
path = "src/lib.rs"

[features]
case_mod = ["convert_case"]
fake_mod = ["fake"]
all_plugins = ["case_mod", "fake_mod"]

[dependencies]
# Parsing files
tera = { version = "1.5", default-features = false }
walkdir = "2.3"
glob = "0.3"
# Config files
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0"
# zip = "0.5" # To decompress downloaded templates
# git2 = { version = "0.13", optional = true } # To download from any git repo (feature git)
# ureq = { version = "0.10", optional = true } # To download from github easily (default feature)
# Command line utility
clap = "2.33"
dialoguer = "0.6"
console = "0.12"
indicatif = "0.15"
# prettytable-rs = "0.8"
human-panic = "1.0"
anyhow = "1.0"
thiserror = "1.0"
# Plugins
convert_case = { version = "0.4", optional = true }
fake = { version = "2.2", features = ["chrono"], default-features = false, optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = 'abort'
