[package]
name = "hume-endpoints"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "1.0.2"
actix-web-codegen = "0.1"
log = "0.4"
badlog = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10"
simple-error = "0.2"
futures = "0.1"
http = "0.1"
ah-tools = { git = "https://github.com/joxcat/ah-tools.git", features = ["security","urlenc","passwords","simple-db"] }
chrono = "0.4"
lazy_static = "1.3"
